change #project-nav -> #project-side for clarity, slide out project-nav to 40% of document when opening, make project-side Work header fixed, hide project grid icon on homepage, make project_side partial for sidebar project nav, wrap projects in articles to give <h1> proper hierarchy

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -26,13 +26,13 @@
 
 .menu-toggle {
   top: 23px;
-  right: 25px;
+  right: 70px;
   position: absolute;
 }
 
-.project-nav-toggle {
+.project-side-toggle {
   top: 23px;
-  right: 70px;
+  right: 25px;
   position: absolute;
 }
 
