--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -1,6 +1,6 @@
 // Sidebar
 
-#project-nav,
+#project-side,
 #side {
   top: 0;
   bottom: 0;
@@ -15,33 +15,59 @@
   &.open {
     right: 0;
     .menu-toggle {
+      right: 25px;
       opacity: 1;
       transition-delay: .2s;
     }
   }
+  .menu-toggle {
+    right: -20px;
+    z-index: 1;
+    opacity: 0;
+    position: fixed;
+    transition: opacity .2s ease-out;
+  }
+  .tcon-menu__lines {
+    &:before, &:after {
+      background: $white;
+    }
+  }
+}
+
+#side {
   // Color changes
   @each $page-color, $bgcolor in $page-colors {
     &.color-#{$page-color} {
       background: $bgcolor;
     }
   }
-
-  .menu-toggle {
-    z-index: 1;
-    opacity: 0;
-    position: fixed;
-    transition: opacity .2s ease-out;
-    .tcon-menu__lines {
-      &:before, &:after {
-        background: $white;
-      }
-    }
-  }
 }
 
-#project-nav {
-  display: none;
-  width: 50%;
+#project-side {
+  width: 40%;
+  right: -40%;
+  padding-top: 66px;
+  overflow: hidden;
+  header.main {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 66px;
+    background: $black;
+    padding: 22px 25px;
+    h2 {
+      color: $white;
+      font: 24px/1 $font-display;
+    }
+  }
+  .projects {
+    height: 95vh;
+    overflow: auto;
+  }
+  .view-project {
+    font-size: 24px;
+  }
 }
 
 // Main Nav
